# sl-tourism-ai

./: README.md
backend/: .env.example  .gitignore  config.py  load_data.py  main.py  pyproject.toml  rag_pipeline.py  test_pipeline.py
backend/data/: attractions.txt  hotels.txt  transport.txt
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/components/: ItineraryDisplay.jsx  PreferenceForm.jsx
