[project]
name = "backend"
version = "0.1.0"
description = "Ceylon Compass backend — RAG itinerary generator (FastAPI + ChromaDB + Gemini)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.4",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
